--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
     "test": "sass-lint static/**/*.scss --verbose --no-exit",
     "clean": "rm -rf node_modules yarn-error.log static/css *.log *.sqlite _site/ build/ .jekyll-metadata",
     "watch": "node-sass --include-path node_modules --source-map true --watch static/sass --output static/css",
-    "build": "node-sass --include-path node_modules static/sass --output static/css"
+    "build": "node-sass --include-path node_modules static/sass --output static/css && postcss --use autoprefixer -b 'last 2 versions' < static/css/styles.css | postcss --use cssnano > static/css/styles.min.css"
   },
   "author": "Canonical webteam",
   "license": "LGPL v3",
   "devDependencies": {
+    "autoprefixer": "^6.3.1",
+    "cssnano": "3.10.0",
     "sass-lint": "^1.10.2",
     "node-sass": "^4.5.3",
+    "postcss": "^5.0.16",
+    "postcss-cli": "^2.5.1",
     "vanilla-brochure-theme": "1.0.9"
   }
 }
